<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/profile"
        android:layout_marginBottom="@dimen/d10"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/d10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/d25"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myevents"
        android:layout_marginLeft="@dimen/d10"
        android:layout_marginBottom="@dimen/d10"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_myevents"
        android:layout_marginLeft="@dimen/d10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>