<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetpasswprdlogin"
        android:layout_gravity="center"
        android:textSize="@dimen/d20"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginLeft="@dimen/d20"
        android:layout_marginRight="@dimen/d20"
        android:layout_marginBottom="@dimen/d20"
        android:id="@+id/txt_email_resetpassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        style="@style/BotonEstilo1"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/d20"
        android:layout_marginRight="@dimen/d20"
        android:id="@+id/btn_send"/>

</LinearLayout>