<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/imagenevent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select"
            style="@style/BotonEstilo3"
            android:layout_marginBottom="10dp"
            android:id="@+id/btn_imagenevent"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/name"
            android:id="@+id/txt_nameevent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startdate"
            android:id="@+id/textview_fechainicio"
            android:background="?attr/selectableItemBackground"
            android:onClick="onClickFechaInicio"
            android:clickable="true"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/d20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starthour"
            android:id="@+id/textview_horainicio"
            android:background="?attr/selectableItemBackground"
            android:onClick="onClickHoraInicio"
            android:clickable="true"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/d20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finaldate"
            android:id="@+id/textview_fechafinal"
            android:background="?attr/selectableItemBackground"
            android:onClick="onClickFechaFinal"
            android:clickable="true"
            android:textSize="@dimen/d20"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/description"
            android:id="@+id/txt_description"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/location"
            style="@style/BotonEstilo3"
            android:id="@+id/btn_ubicacion"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Spinner
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/spinner_types"
                android:entries="@array/types"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                style="@style/BotonEstilo1"
                android:layout_gravity="center"
                android:id="@+id/btn_addtype"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Spinner
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/spinner_styles"
                android:visibility="invisible"
                android:entries="@array/styles" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                style="@style/BotonEstilo1"
                android:layout_gravity="center"
                android:id="@+id/btn_addstyle"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Spinner
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/spinner_categories"
                android:visibility="invisible"
                android:entries="@array/categoriesBattle"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                style="@style/BotonEstilo1"
                android:layout_gravity="center"
                android:id="@+id/btn_addcategory"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            style="@style/BotonEstilo3"
            android:layout_gravity="center"
            android:id="@+id/btn_createevent" />

    </LinearLayout>

    </ScrollView>

</LinearLayout>